Alignment fix.

--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ body {
   background: white;
   padding: 20px 100px;
   border-radius: 30px;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
 }
 
 .modal.content {
