--- a/src/ImportDropdown.css
+++ b/src/ImportDropdown.css
@@ -20,7 +20,7 @@
   font-weight: 660;
   text-align: left;
   font-size: 17px;
-  width: 572px;
+  width: 540px;
   height: 45px;
   -webkit-appearance: none;
   -moz-appearance: none;
